--- a/package.json
+++ b/package.json
@@ -26,15 +26,23 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "connect-redis": "^4.0.4",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "redis": "^2.8.0"
+  },
   "devDependencies": {
+    "@nrwl/node": "^8.12.2",
     "@nrwl/workspace": "8.12.2",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "prettier": "1.18.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.5.3",
-    "prettier": "1.18.2"
+    "typescript": "~3.5.3"
   }
 }
