--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
   },
   "private": true,
   "dependencies": {
-    "connect-redis": "^4.0.4",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "redis": "^2.8.0"
+    "body-parser": "1.19.0",
+    "connect-redis": "4.0.4",
+    "document-register-element": "1.13.1",
+    "express": "4.17.1",
+    "express-session": "1.17.0",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
+    "redis": "2.8.0"
   },
   "devDependencies": {
-    "@nrwl/node": "^8.12.2",
+    "@nrwl/node": "8.12.2",
     "@nrwl/workspace": "8.12.2",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
